samples/_failures_safe/1761319568_b87ee5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14ce8722.c: In function ‘main’:
./samples/SAFE/__tmp_14ce8722.c:159:20: error: missing terminating " character
  159 |             printf("Failed
      |                    ^~~~~~~
./samples/SAFE/__tmp_14ce8722.c:159:13: error: expected expression at end of input
  159 |             printf("Failed
      |             ^~~~~~
./samples/SAFE/__tmp_14ce8722.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_14ce8722.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_14ce8722.c:159:13: error: expected declaration or statement at end of input
